--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,46 @@
 @import '~antd/dist/antd.css';
 
-.auth {
-  text-align: center;
-  margin-top: 20%
+.container {
+  display: flex;
+  height: 100%
+}
+
+.auth-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1;
+  padding: 1rem;
+  height: 100vh
+}
+
+.auth-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #3a3b5a;
+  flex: 1;
+  padding: 1rem;
+  height: 100vh
 }
 
 .auth-headerText {
-  font-size: 2rem
+  font-size: 2rem;
+  text-align: center
 }
 
 .auth-welcomeText {
-  font-style: oblique
+  font-style: oblique;
+  text-align: center;
+  margin-bottom: 3%
+}
+
+.login-form {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.login-form-forgot {
+  float: right;
 }
