get event + reducer

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -113,3 +113,15 @@
 .component-todoList-wrapper {
 
 }
+
+/*
+***** Component: Calendar *****
+**/
+.spinner {
+  text-align: center;
+  background: rgba(0,0,0,0.05);
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 30px 50px;
+  margin: 20px 0;
+}
